# awscode-commit-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  run_mcp_server.py
.cursor/rules/: openmemory.mdc
docs/: WORKFLOW.md
scripts/: check_tools.py
src/: __init__.py  __main__.py  auth.py  exceptions.py  pagination.py  schemas.py  server.py
src/services/: __init__.py  diff_analyzer.py  pull_request.py  repository.py
src/tools/: __init__.py  registry.py
tests/: conftest.py  test_auth.py  test_diff_analyzer.py  test_pull_request.py  test_repository.py  test_server_scaffold.py
