[project]
name = "awscodecommit-mcp"
version = "0.1.0"
description = "MCP server for AWS CodeCommit — repositories, branches, diffs, pull requests, and PR review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
awscodecommit-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
